--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <title>Angular demo</title>
 
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../gridstack.css"/>
-    <link rel="stylesheet" href="../gridstack-extra.css"/>
+    <link rel="stylesheet" href="css/gridstack.css"/>
+    <link rel="stylesheet" href="css/gridstack-extra.css"/>
 
     <style type="text/css">
         .grid1 {
@@ -60,8 +60,8 @@
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/3.5.0/lodash.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
-    <script src="../gridstack.js"></script>
-    <script src="../angular-gridstack.js"></script>
+    <script src="js/gridstack.js"></script>
+    <script src="js/angular-gridstack.js"></script>
 
     <script type="text/javascript">
 
