--- a/index.html
+++ b/index.html
@@ -27,8 +27,45 @@
     </style>
 </head>
 <body ng-app="GridStack" ng-controller="DemoCtrl">
+    
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="index.html">Angular-gridstack</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="auto.html">Auto position <span class="sr-only">(current)</span></a></li>
+            <li><a href="demo.html">Routing</a></li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#">Link</a></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a href="#">Action</a></li>
+                <li><a href="#">Another action</a></li>
+                <li><a href="#">Something else here</a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="#">Separated link</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+    </nav>    
+
     <div class="container-fluid">
-        <h1>Angular gridstack demo</h1>
+
         <p>{{widgets}} {{foo}}</p>
         <div>
             <a class="btn btn-primary" ng-click="addWidget()" href="#">Add Widget</a>
@@ -39,11 +76,9 @@
                 <div class="grid-stack grid1" ng-model="widgets" grid-stack serialize="serialize()" options="options">
                     <div class="grid-stack-item" 
                         data-gs-x="{{w.x}}" data-gs-y="{{w.y}}" 
-                        data-gs-width="{{w.width}}" data-gs-height="{{w.height}}" ng-repeat="w in widgets" gridstack-item="widget">
+                        data-gs-width="{{w.width}}" data-gs-height="{{w.height}}" data-gs-auto-position="{{w.auto}}" ng-repeat="w in widgets" gridstack-item="widget">
                             <div class="grid-stack-item-content">
-                                <ul>
-                                    <a class="btn btn-primary" ng-click="removeWidget(w)" href="#">remove widget</a>
-                                </ul>
+                                <a class="btn btn-primary" ng-click="removeWidget(w)" href="#">remove widget</a>
                             </div>
                     </div>
                 </div>
@@ -75,7 +110,7 @@
             $scope.addWidget = function() {
                 var newItem =
                 {
-                  x: 0  , y: 0  , width: 1, height: 1
+                  x: 0  , y: 0  , width: 1, height: 1, auto:0
                 };
                 $scope.widgets.push(newItem);
             };
