--- a/auto.html
+++ b/auto.html
@@ -44,6 +44,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
+            <li><a href="auto.html">Home <span class="sr-only">(current)</span></a></li>
             <li><a href="auto.html">Auto position <span class="sr-only">(current)</span></a></li>
             <li class="active"><a href="demo.html">Routing</a></li>
           </ul>
