--- a/auto.html
+++ b/auto.html
@@ -45,8 +45,8 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
             <li><a href="index.html">Home <span class="sr-only">(current)</span></a></li>
-            <li><a href="auto.html">Auto position <span class="sr-only">(current)</span></a></li>
-            <li class="active"><a href="demo.html">Routing</a></li>
+            <li class="active"><a href="auto.html">Auto position <span class="sr-only">(current)</span></a></li>
+            <li><a href="routing.html">Routing</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#">Link</a></li>
