--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="index.html">Home <span class="sr-only">(current)</span></a></li>
             <li><a href="auto.html">Auto position <span class="sr-only">(current)</span></a></li>
-            <li><a href="demo.html">Routing</a></li>
+            <li><a href="routing.html">Routing</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#">Link</a></li>
