--- a/index.html
+++ b/index.html
@@ -14,10 +14,6 @@
     <link rel="stylesheet" href="css/gridstack.css"/>
     <link rel="stylesheet" href="css/gridstack-extra.css"/>
 
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.1.1/gh-fork-ribbon.min.css" />
-    <!--[if lt IE 9]>
-      <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.1.1/gh-fork-ribbon.ie.min.css" />
-    <![endif]-->
     <style type="text/css">
         .grid1 {
             background: lightgoldenrodyellow;
@@ -32,11 +28,9 @@
 </head>
 <body ng-app="GridStack" ng-controller="DemoCtrl">
 
-    <div class="github-fork-ribbon-wrapper right">
-        <div class="github-fork-ribbon">
-            <a href="https://github.com/tropicalista/angular-gridstack">Fork me on GitHub</a>
-        </div>
-    </div>
+    <a class="hidden-xs" href="https://github.com/tropicalista/angular-gridstack">
+        <img style="position: absolute; top: 0; right: 0; border: 0; z-index:100" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub">
+    </a>
 
     <nav class="navbar navbar-default">
       <div class="container-fluid">
