--- a/routing.html
+++ b/routing.html
@@ -92,7 +92,7 @@
                     data-gs-x="{{w.x}}" data-gs-y="{{w.y}}" 
                     data-gs-width="{{w.width}}" data-gs-height="{{w.height}}" ng-repeat="w in widgets" gridstack-item="widget">
                         <div class="grid-stack-item-content">
-                            <a class="btn btn-primary" ng-click="removeWidget(w)" href="#">remove widget</a>
+                            <a class="btn btn-primary" ng-click="removeWidget(w)">remove widget</a>
                         </div>
                 </div>
             </div>
